k8s/overlays/development/home-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
spec:
  template:
    spec:
      containers:
      - name: home
        resources:
          limits:
            cpu: "0.1"
            memory: "128Mi"
          requests:
            cpu: "0.05"
            memory: "64Mi"
