k8s/overlays/development/users-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  template:
    spec:
      containers:
      - name: users
        resources:
          limits:
            cpu: "0.1"
            memory: "128Mi"
          requests:
            cpu: "0.05"
            memory: "64Mi"
