k8s/overlays/development/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
  - hosts:
    - dev.kaja.tools
    secretName: tls-secret-dev
  rules:
  - host: dev.kaja.tools
